<resources>
    <string name="app_name">Found my car</string>
    <string name="welcome" translatable="false">ברוכים הבאים</string>
    <string name="title_first_layout" translatable="false">מפות לבחירה</string>
    <string name="name" translatable="false"> שם מלא</string>
    <string name="default_name" translatable="false">יוסי כהן</string>
    <string name="car_number">11-222-33</string>
    <string name="car_number2" translatable="false">מספר רכב</string>
    <string name="location" translatable="false">מיקום</string>
    <string name="GPSlocation">32456464</string>
    <string name="new_user" translatable="false">משתמש חדש</string>
    <string name="my_location" translatable="false">מפת מיקום</string>
    <string name="parking_maps" translatable="false">מפת חניונים</string>
    <string name="kind" translatable="false">סוג הרכב</string>
    <string name="car_kind" translatable="false">הונדה</string>
    <string name="massege_location_button_update" translatable="false">מיקומך מתעדכן..</string>
    <string name="maps" translatable="false">מפות</string>
    <string name="settings" translatable="false">הגדרות</string>
    <string name="change_name" translatable="false">שנה שם משתמש</string>
    <string name="change_kind" translatable="false">שנה את סוג הרכב</string>
    <string name="change_car_num" translatable="false">שנה את מספר הרכב</string>
    <string name="save_data" translatable="false">שמור</string>
    <string name="saved_location" translatable="false">מיקומך נשמר בהצלחה!!</string>
    <string name="new_location" translatable="false">מיקום חדש</string>
    <string name="the_team" translatable="false">חברי הצוות</string>
    <string name="search_parking" translatable="false">חיפוש חניון קרוב</string>
    <string name="save_new_location" translatable="false">שמור מיקום חדש</string>
    <string name="nadia" translatable="false">נדיה מילסטיין</string>
    <string name="nadia_details" translatable="false">" \n מהנדסת תמיכה בOffice 365|\nידע מעמיק בExchange Online  ואינטגרציה עם מערכות\n ארגוניות מקומיות (Hybrid).  שליטה טובה בכל סוגי\n המיגרציות ל- Exchange online-\n . Cutover, Stage, Imap, Hybridהיכרות טובה עם\n שרתי Exchange 2007, 2010, 2013.\nניהול משתמשים ושירותים Portal office 365,\n DirSync, AD FS, TMG. הכרות טובה עם מערכות \noffice 365  השונות – Share point online, One drive for business\n, Skype for business. היכרות והבנה טובה של \nכתיבת פקודות וסקריפטים POWERSELL, \nהכירות מלאה עם המודולים של Exchange online ו AD azure.\nהשכלה | מל\"א - לימודי BA תואר ראשון \nבמערכות מידע ניהוליות - ביה\"ס דן ללימודי הייטק\n"</string>
    <string name="karlina" translatable="false">קרלינה יקטרינה</string>
    <string name="karlina_details" translatable="false">\nבודקת איכות תוכנה QA ורפרנט תמיכת אינטרנט.\n\nמתודולוגיית, טכניקות וסוגי בדיקות, ידע בשפת SQL  ,\n ידע מעשי בתוכנת הבדיקות HP QUALITY CENTER, \nכתיבת מסמכי אפיון ובדיקות–   STP, STD, STR\nניסיון בפרויקט בדיקות בסביבת WEB ,\nISTQB, SELENIUM, HTML JAVASCRIPT.\n\n\nהשכלה | מל\"א -\n לימודי BA תואר ראשון במערכות מידע ניהוליות - ביה\"ס דן ללימודי הייטק\n</string>
    <string name="nataly">נטלי יופה</string>
    <string name="nataly_details" translatable="false">\nשיננית במכבי שירותי בריאות |\n\n• מסירה אבנית, כתמים, ורובד משיניים.\n• איטום ופלואורידים כדי לסייע בהגנה על השיניים.\n•מצלמת ומפתחת צילומי רנטגן דנטליים.\n• עושה הערכה של בריאות הפה של \nהמטופלים ומדווחת על הממצאים לרופאי שיניים.\n• מכינה תוכניות טיפול.\n• מחנכת את המטופלים על טכניקות היגיינת הפה, \nכגון כיצד לצחצח ולהשתמש בחוט דנטלי כהלכה.\n\nהשכלה | מל\"א – המרכז ללימודים אקדמיים\n</string>

    <string name="google_maps_key_instructions" templateMergeStrategy="replace"><!--
    TODO: Before you run your application, you need a Google Maps API key.
    To get one, follow this link, follow the directions and press "Create" at the end:
https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=17:8A:66:F5:C7:FF:50:E3:77:FB:79:8A:79:3F:30:43:FC:D6:CE:61%3Bteamtreehouse.com.iamhere
    You can also add your credentials to an existing key, using this line:
    17:8A:66:F5:C7:FF:50:E3:77:FB:79:8A:79:3F:30:43:FC:D6:CE:61;teamtreehouse.com.iamhere
    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
    string in this file.
    --></string>
    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyBpWdQPBGBjEOwQSkGHYLr9gbEqjaCD64c</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
