<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dudizagga.foundmycar.Settings"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/settings"
        android:text="@string/settings"
        android:id="@+id/settings"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/nameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/row_fill2"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/nameSet"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/change_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kind"
        android:id="@+id/carKindText"
        style="@style/row_fill2"
        android:layout_below="@+id/editTextName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/carKindSet"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/change_kind"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_number2"
        android:id="@+id/carNumText"
        style="@style/row_fill2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/carNumSet"
        android:inputType="number|textFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/change_car_num"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data"
        android:id="@+id/buttonSave"
        android:layout_below="@+id/editTextTypeCar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:layout_gravity="center_horizontal"
        android:onClick="saveChanges"
        android:nestedScrollingEnabled="true"
        style="@style/button_fb"
        />
</LinearLayout>
