<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dudizagga.foundmycar.MainActivity"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        style="@style/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/carKindV"
        style="@style/row_fill2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameYossi"
        android:layout_marginTop="15dp"
        android:text="@string/car_kind"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/kind"
        style="@style/row_fill2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/carKindV"
        android:layout_alignParentEnd="true"
        android:text="@string/kind"
        android:layout_alignParentRight="true" />

    <TextView
        style="@style/row_fill2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/carNum"
        android:layout_alignParentEnd="true"
        android:text="@string/car_number2"
        android:id="@+id/textView5"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/locationTe"
        style="@style/row_fill2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/location"
        android:layout_alignParentEnd="true"
        android:text="@string/location"
        android:layout_alignParentRight="true" />

        <TextView
        style="@style/row_fill2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/kind"
        android:layout_marginTop="21dp"
            android:layout_alignLeft="@+id/kind" />

    <TextView
        android:id="@+id/nameYossi"
        style="@style/row_fill2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/default_name"
        android:layout_alignTop="@+id/textView4"
        android:layout_toStartOf="@+id/textView5"
        android:layout_marginTop="3dp"
        android:layout_toLeftOf="@+id/textView5" />

    <TextView
        android:id="@+id/location"
        style="@style/location_point"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/GPSlocation"
        android:layout_below="@+id/carNum"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/carNum"
        style="@style/row_fill2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="16dp"
        android:text="@string/car_number"
        android:layout_below="@+id/carKindV"
        android:layout_toStartOf="@+id/kind"
        android:layout_toLeftOf="@+id/kind" />

        <WebView
            android:id="@+id/map2"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@+id/location"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp" />
    </RelativeLayout>



</RelativeLayout>
