<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_the_team_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dudizagga.foundmycar.TheTeamPage"
    android:layoutDirection="locale">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <VideoView
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:id="@+id/video"

            />
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/video"
        android:id="@+id/nadia"
        android:layout_marginTop="15dp"
        android:background="@drawable/nadia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/nadia_details"
        android:layout_alignLeft="@+id/textView2"
        android:id="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/details"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/nadia"
        android:textSize="15dp"
        android:id="@+id/textView2"
        android:layout_alignParentRight="true"
       android:layout_alignParentEnd="true"
        android:layout_below="@+id/video"
        android:layout_marginTop="15dp"
        style="@style/name"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="25dp"
        android:id="@+id/karlina"
        android:background="@drawable/kati"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/karlina"
        android:textSize="15dp"
        android:id="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="25dp"
        style="@style/name"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:text="@string/karlina_details"
        android:layout_alignLeft="@+id/textView3"
        android:id="@+id/textView"
        style="@style/details"/>
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textView"
        android:id="@+id/nataly"
        android:background="@drawable/nataly"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/nataly"
        android:id="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="25dp"
        style="@style/name"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:text="@string/nataly_details"
        android:layout_alignLeft="@+id/textView4"
        android:id="@+id/textView5"
        style="@style/details"/>


    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
